<resources>
    <string name="app_name">City Fm</string>
    <string name="action_settings">Settings</string>

    <string name="is_display_ad">true</string>
    <string name="admob_publisher_id">a150dc9f65a4c88</string> <!-- Enter your AdMob Publisher ID -->
    <string name="facebook_id">SriLankaBroadcastingCorporation</string>
    <string name="twitter_id">SLBCradio</string>
    <string name="Copy">Powered By Sarasa Soft Solutions (Pvt) Ltd</string>

    <string-array name="station_names">
        <item>City Fm</item>
        <!--<item>Sirasa Fm</item>-->

    </string-array>
    <string-array name="station_urls">
        <item>http://220.247.227.6:8000/stream</item>
       <!-- <item>http://76.164.217.100:7024/;stream.mp3</item>-->
    </string-array>
    <string-array name="station_types">
        <item>mp3</item>
        <!--<item>mp3</item>-->
    </string-array>

    <string name="menu_radio">Now Playing</string>
    <string name="menu_stations">Stations</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-0664573200302260/332653322424</string>
    <string name="interstitial_full_screen">ca-app-pub-066498932138293260/1769900428</string>

</resources>
